<resources>


    <string name="title_activity_user_account">ActivityUserAccount</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Confirm password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="signin_title">Already \nhave an \nAccount?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="social_sign_text">use social login</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="register_title">Here’s\nyour first\nstep with \nus! </string>
    <string name="register_now">New user? Register Now</string>
    <string name="empty_first_name">Enter first name</string>
    <string name="empty_last_name">Enter last name</string>
    <string name="not_same_password">Confirm Password is not same as Password</string>
    <string name="valid_email">Enter valid email</string>
    <string name="error_accept_terms">Accept terms and conditions by clicking on the checkbox</string>
    <string name="hint_sign_up_pin">Set your 4 digit PIN</string>
    <string name="enter_email">Enter email</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="hint_email">Email</string>
    <string name="terms_services_text">Terms and conditions</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_mobile_number">Mobile Number</string>
    <string name="space"><![CDATA[&#160;]]></string>
    <string name="country_name">Search for country</string>
    <string name="cancel">Cancel</string>
    <string name="plus">+</string>
    <string name="country_code_format">+%s</string>
    <string name="sign_in">SIGN IN</string>
    <string name="empty_mobile_number">Enter mobile number</string>
    <string name="valid_mobile_number">Enter valid mobile number</string>
    <string name="empty_password">Enter Password</string>
    <string name="valid_password">Enter valid Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="text_hint">Search store..</string>

    <!-- Bottom navigation menu fields  -->
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="manage_store">Manage Store</string>
    <string name="explore">Explore</string>
    <string name="user">User</string>
    <string name="desc_location">img_location</string>
    <string name="category_men">MEN</string>
    <string name="category_women">WOMEN</string>
    <string name="category_kids">KIDS</string>
    <string name="best_deals">Best deals</string>
    <string name="deals_decs">Minimum 25% off at the selected premium saloons</string>
    <string name="best_deals_in_hyd">Discover best deals in hyderabad</string>
    <string name="see_all">See All</string>
    <string name="read_more">Read More</string>
    <string name="blog_title">Hair Care tips in Monsoon</string>
    <string name="blog_content">Monsoon season is always loved by everyone. Everything becomes enjoyable in this weather. But there is one thing</string>
    <string name="hint_dob">mm/dd/yyyy</string>
    <string name="permission_required">Permission Required</string>
    <string name="location_required_to_find_stores">Location permission is required to find stores near you</string>
    <string name="turn_on_permissions_at_setting"><![CDATA[Please turn on permissions at\n[Setting] > [Permission]]]></string>
    <string name="settings">Settings</string>
    <string name="request">Request</string>
    <string name="location_unknown">Unknown Location</string>
    <string name="hint_store_name">Store name</string>
    <string name="empty_store_name">Enter store name</string>
    <string name="select_category">Select store category</string>
    <string name="error_select_category">Select store categories</string>
    <string name="bookings">Bookings</string>
    <string name="profile">Profile</string>

    <string name="lorem">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec vehicula sem a malesuada rhoncus. Pellentesque ut dolor a dui porttitor porta lacinia non libero. Nunc volutpat arcu quis quam convallis molestie. Etiam ac tristique sem, id commodo justo. Phasellus congue tincidunt lectus, at dignissim ligula maximus eu. Quisque interdum nunc eget tellus bibendum suscipit. Phasellus feugiat ultricies posuere. Nullam porta accumsan velit, ut rutrum massa fermentum eu. Nunc ac bibendum nunc. Mauris eu ultricies ipsum. Ut id dolor dui. Pellentesque dictum dui vel tempus maximus. Vivamus non nisi quis libero scelerisque pretium. Ut eu tristique justo. Sed pellentesque placerat quam, ut ultricies turpis feugiat a. Aliquam a volutpat risus.

Praesent at lectus semper, suscipit elit in, facilisis massa. Phasellus sed vestibulum ante, a euismod sem. Interdum et malesuada fames ac ante ipsum primis in faucibus. Proin tincidunt orci augue, a porta odio lacinia eu. Nunc in congue risus. Maecenas commodo nibh ac enim fermentum, eu sagittis massa blandit. Vestibulum elementum massa nec dapibus mollis. Etiam porta, est sit amet aliquet porta, odio elit finibus risus, id rutrum purus mi non ipsum. Nulla viverra nec enim sed venenatis.

Maecenas mattis, erat et viverra euismod, neque diam porttitor tellus, in fringilla metus est id augue. Nunc at metus cursus, porttitor nisi vitae, congue diam. Curabitur ligula massa, ullamcorper eget scelerisque vel, pharetra ac sapien. Ut auctor luctus ultricies. Nullam semper tortor ac elementum luctus. In et tempus ex. Praesent sodales, dolor id volutpat elementum, ligula enim euismod odio, maximus sodales magna neque nec neque. Curabitur pretium nisl neque, consequat aliquet dui tincidunt ac. Vivamus augue nunc, aliquet eu ex a, ultrices aliquam lorem. Duis nibh lectus, ultricies vel iaculis sit amet, imperdiet id sapien. Duis scelerisque sodales metus eu rutrum. Suspendisse posuere nisi ac magna consequat, eu vestibulum ipsum venenatis. Suspendisse auctor nisi nec leo venenatis tristique.

Praesent tincidunt lorem sit amet mi consequat cursus. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent vitae blandit sapien. Curabitur est sapien, lobortis sit amet facilisis vel, faucibus eu quam. Nam tempus libero at tellus tempor laoreet. Pellentesque quam lorem, tincidunt in molestie eget, dictum vel risus. Nunc gravida convallis mattis.
    </string>
    <string name="user_name">User name</string>
    <string name="bank_details">Bank Details</string>
    <string name="bank_details_caption">Save your account details for  faster access</string>
    <string name="store_details">Store Details</string>
    <string name="store_details_caption">Manage store timings and details</string>
    <string name="profile_details">Profile Details</string>
    <string name="profile_details_caption">Change your profile details and password</string>
    <string name="about_us">About US</string>
    <string name="terms_of_use">Terms of use</string>
    <string name="privacy">Privacy policy</string>
    <string name="logout">Logout</string>
    <string name="seat_creation">Seat Creation</string>
    <string name="seat_creation_desc">"Manage seat creation "</string>
    <string name="barber_creation">Barber Creation</string>
    <string name="barber_creation_desc">Manage barber creation</string>
    <string name="product_creation">Product Creation</string>
    <string name="product_creation_desc">Manage product creation</string>
    <string name="barbers">Barbers</string>
    <string name="services">Services</string>
    <string name="seats">Seats</string>
    <string name="add_barber">Add Barber</string>

</resources>
